overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
   gap: 10px;
-  min-width: 20rem;
+  width: 20rem;
 }
 
 .outputScreen {
@@ -36,6 +36,7 @@ body {
   margin: 0 10px;
   font-size: 2.5rem;
   color: antiquewhite;
+  overflow: hidden;
 }
 
 .btn {
