--- a/src/breakpoints.css
+++ b/src/breakpoints.css
@@ -7,7 +7,7 @@
     gap: 3%;
   }
   .outputScreen {
-    margin: 20% 0;
+    margin: 15% 0;
   }
   .btn {
     font-size: 1.2rem;
